# udplbd2

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.sqlx/: query-012bd8c8ac1cc8f5cfcc2b08f55d2b5659ffeb2a4d939e3726387db5958812f0.json  query-055672d55594d80b82d3e442381ad758e6dd4c272f32174f3890f60e2dd5ef90.json  query-05c8bb8c7838d6733c263990ecb4b17452e487188906a007c356c7fe5a51014a.json  query-05f82ce88f3c77db4187c0e859d7f31d766e8632520622733709ab6e0d246477.json  query-060f13d01ec1128cb9f04ac31c13d1339a52bd630dd051a23b49c9a2a5c2944f.json  query-079cd2fcc3414440bc7db0a030c0faf5ef1e3a842a039667e355319ba4a75f07.json  query-084cd9abd4e0f2015aac8cde2710e13b87ca22e256f055cdb98bdaadfebccb86.json  query-0a42a969846ba7161a2b5574e5be7437dadcdc814694f2817ea34d4ba9fad780.json  query-0c9d4f336c68e2f8aec52849be35688aef936043b2ba408673e2e79cb74c2058.json  query-0cf9d0f67755c03398d700d2e92221fe63077c6a297bd3f159c035d795b40b84.json  query-0db72a8c1bc985f262fd569984603c6daef202527e35bcb07c46e38aa17edfff.json  query-0eb018afaa72fa15983369a962bcfce13de7f1f229f887b2e5003164da37ce3a.json  query-0ec345f09dabeca0bf378f67b28a2cbe957b1c6e4134b515689a5494ca709f95.json  query-105e74f79e68bdb99e74f533fa4f10649819e17a73381395ebe38c51107a0c02.json  query-122ff23d006502ef26dd33a400ccd179f0b397bd36581d2acdfb980f16efbdd7.json  query-127ed247fe5bafb90b3a562156ed66a643724f00e1a30e133d9aa9898919c095.json  query-141e2798daa6c85026f9c9b2dd9888d9b580e891a018900f1ecbf19aabcd267e.json  query-165ca69993870f40d815ae0d68be2b074195687c6401982a8546f24a854a1e3d.json  query-17ab4b10583c98f7493b37883c8e273f8f07cda50a4bfa767ef5beb44cb41d73.json  query-187a5102c6de8ae139c626f2ed3d92266045a49859405e4390bf1415b46a9240.json  query-1abb0e17e8516702c0b558757976441daac4d89f93f3fbb6b51ff485db12a700.json  query-1bdafa131402a5fea70c6483c1e852659e560eb36294a13d065fa37d281ceb31.json  query-1c1f972623b3b44cb221358485e807c44874606098d3207789dd2c576db05342.json  query-2040c229779c7cb59ab8ed095381b4b6d5c05dbdbb54b9e24abd93715e8d8030.json  query-2077d367297a3a39833b19b0e5eb3b4c9bc77b7af2101ff35b6899b335518592.json  query-211704dc13502088e271b53010ebbbe2a850a555f9d05a0c048efdc6f7b2bb54.json  query-22c813e96db4224bb56553fb958ccc44a6b3775bc465ab4c50e48ac2f33dda9e.json  query-246b8ae1daf730e78c32c7d48d9a8f8bc3c7291bde36e6dbeffd8738434d9796.json  query-24e60efe109547405a171153085a6470d802d6784ca9dd792af8d61a782f1b4c.json  query-2541e1abee143431388460e9c3ba79cdd9981b10e88a9a30cc7c54bfea325b02.json  query-27a440504dfa736fecfe590ed26377c0b3d94b4a96a80efc2be19b48379ae29e.json  query-281085c7934401e63384c77b8813a389bfbf10548af72848cab3a2de932df69e.json  query-281f0bee7d78fc023fb430d9d11e3a103526d0fb4c2bd1ede6b5e699b2dd28af.json  query-2a6e851d937c372ae5c3dad98b4b8b853bec6caa6ab04f9ccca7cd73e2f430b5.json  query-2b5e3d71613ed2c0821ab687b21731f108c5606c0679cd9a361b5c4a3df955a3.json  query-2bfa2b3c017997c92f7750a406c4fa2ebd1527b8a93a7ec2175a844461a67cf4.json  query-2c4be90d8546eb019a71cfb27dc9b586e11a09417df676c17fe0bb1cc11914bc.json  query-2c93aa8a8f8e3aea08a1a96c60e9d8ab60e4f81491602c52e35d8fd5dd85e76d.json  query-2cec6719702287d83aa2551c3c41b1fc0c11c62f0b490c55df76a4818d966389.json  query-2d474c8a57281cd46ac7ab07d2ea3e40806d821db3e801ae008302d86addc075.json  (+172 more)
docs/: book.toml
docs/src/: SUMMARY.md  configuration.md  database.md  installation.md  introduction.md  observability.md  troubleshooting.md  user-management.md
etc/: example-config.yml
frontend/: app.js  index.html  style.css
frontend/js/: api.js  auth.js  charts.js  main.js  router.js  sidebar.js  state.js  ui.js
frontend/js/views/: dashboard.js  reservation.js  system.js  tokens.js
migrations/: 0001_init.sql  0002_slot_demands.sql  0002_smartnic_metrics.sql  0003_smartnic_metrics.sql  0004_upstream_chain.sql
proto/loadbalancer/: loadbalancer.proto
proto/smartnic/: sn_p4_v2.proto  udplb.p4
src/: api.rs  config.rs  constants.rs  dataplane.rs  db.rs  errors.rs  grpc_common.rs  lib.rs  macaddr.rs  main.rs  metrics.rs  reservation.rs  rest.rs  snp4.rs  util.rs
src/api/: api.rs  cli.rs  client.rs  rest.rs  service.rs  tests.rs  types.rs
src/api/handlers/: lb.rs  mod.rs  session.rs  system.rs  timeseries.rs  token.rs
src/config/: cli.rs
src/dataplane/: cli.rs  doctor.rs  meta_events.rs  mock.rs  pcap.rs  protocol.rs  receiver.rs  sender.rs  tester.rs  turmoil.rs
src/db/: csv.rs  epoch.rs  healthcheck.rs  load_balancer.rs  models.rs  reservation.rs  session.rs  tests.rs  timeseries.rs  token.rs
src/healthcheck/: global.rs  loadbalancer.rs  mod.rs  reservation.rs  session.rs
src/macaddr/: macaddr_linux.rs  macaddr_macos.rs
src/proto/: mod.rs
src/proto/loadbalancer/: google.protobuf.rs  loadbalancer.rs
src/proto/smartnic/: sn_cfg.v1.rs  sn_cfg.v2.rs  sn_p4.v2.rs
src/reservation/: active_reservation.rs  event_id_sync.rs  mod.rs  reservation.rs  static_reservation.rs  upstream.rs
src/sncfg/: cli.rs  client.rs  metrics_collector.rs  mod.rs  setup.rs
src/snp4/: client.rs  metrics_collector.rs  mod.rs  rules.rs
test/dataplane/: chaos-calmed.json  chaos.json  five-setpoint-single-packet.json  five-setpoint.json  group.json  hetero-fixed.json  hetero-short.json  hetero.json  long.json  nodelay.json  overload.json  split.json  static.json  zero-setpoint.json
test/dataplane/chain/: diamond-topology.json  linear-chain.json  multi-sender-chain.json
test/dataplane/sim/: minimal.yaml  minimal_complete.yaml
test/scripts/: explicit-slot-demo.sh  explicit-slot-test.sh
test/sim/: long.yaml  minimal.yaml
